apps/ingress-proxy/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nectarine
  namespace: ingress-proxy
spec:
  type: ExternalName
  externalName: nectarine
