apps/ingress-proxy/homepage.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: ingress-proxy
spec:
  type: ExternalName
  externalName: satsuma
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: ingress-proxy
spec:
  ingressClassName: nginx
  rules:
    - host: fruitiex.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
