apps/ingress-proxy/ingress-nectarine-lovegren-fi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nectarine-lovegren-fi
    namespace: ingress-proxy
    annotations:
        cert-manager.io/cluster-issuer: ${LETSENCRYPT_CLUSTER_ISSUER}
        external-dns.alpha.kubernetes.io/exclude: "true"
spec:
    ingressClassName: public
    tls:
        - secretName: nectarine-tls
    rules:
        - host: ENC[AES256_GCM,data:xv6IrZkpPgdVISZSHBlDHEc=,iv:hiUDtrQQza7UpvpDUPAo8t6rbovOTulkYYF4jhB/m+8=,tag:YK5YYOSQcFK1m740hqUk+w==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nectarine
                        port:
                            number: 10002
        - host: ENC[AES256_GCM,data:rpmCFAHWj01YMsqRHnJe9GQi,iv:RauaHCpuzq1VBwpF7ZeT5AQTZ/5xdTlBaVMPZxp1NbY=,tag:MphsZnaOpEYDrY4i4EgKOg==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nectarine
                        port:
                            number: 5081
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-05-29T20:21:51Z"
    mac: ENC[AES256_GCM,data:lEAZ+JBFzRTL8GIV/kepAc1TZkKWbaITLf8YWV5UF+Oc2gt8dCTZosIsOD7UdB2IHjz3FDAJu6LUXaKjXwQ0hVsOO5N7q5WPz1UqPlgpMdyiutkP2x1cqJWLvrUTfKNNPxnsNme+ncnfdwzWVCnODbxS8FJH1YY040aazURe5/w=,iv:ezaKoMtBzR7L5cLSMbVAfIacwPvIBgAFOKjIW6uRp60=,tag:jOCuEjUM9EbVW7qlxDP8mA==,type:str]
    pgp:
        - created_at: "2023-04-10T17:59:38Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA8WjeZLD+fxwAQ//Y0MfVpk9G0PvpfLWMevIARlNbInfcRxDswfvNHK6Wjc7
[...]
            H1ye2GX0h7exzQkdMXEumjFoeJpyWLJ0n6fNef1PVTG2Eg==
            =ladq
            -----END PGP MESSAGE-----
          fp: 3536F7F9345D96C86FB7F9CD21FAFEE575B18815
    encrypted_regex: ^(hosts?)$
    version: 3.7.3
