apps/ingress-proxy/ingress-nectarine.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nectarine
    namespace: ingress-proxy
    annotations:
        cert-manager.io/cluster-issuer: ${LETSENCRYPT_CLUSTER_ISSUER}
spec:
    ingressClassName: public
    tls:
        - hosts:
            - ENC[AES256_GCM,data:hlr1CCtzAJZAls+1kxGJ2Y++47s/ww==,iv:xmUb8x9Tj/WdJxJ0/QcwN5rEz/V70TiL6c57jkCmF8o=,tag:VhlCRtJT04qeFrSXgWLC1w==,type:str]
            - ENC[AES256_GCM,data:51SHpMJQsAr7s3akRhrNZY5F,iv:Vpyb17WKrco32uqLBZZZXN0QPSj4XxRFUXqtW3jggJs=,tag:BIXKyt7UwqJwKS66L02ztA==,type:str]
            - ENC[AES256_GCM,data:T6+Hp+nnaxbAtfDn6H8oQs5YDQ==,iv:pvNrkP6WdFicGEoxNmY4igZxNJzK18bhR5fecrwu2/s=,tag:ns7pRygaXjXrBxzj39b1Pg==,type:str]
            - ENC[AES256_GCM,data:+OL6TXENhHHjPw5UU9oal94=,iv:G5M5aTKXhQnZEK3qG4c8UhCqpcMQWthF6SfTKhLdqhE=,tag:+7oft11Y94JEJJis3YBVYg==,type:str]
            - ENC[AES256_GCM,data:eYgNcphANZyRjQVKeu6i6NwS,iv:ly35YD769N0jT8bFBu+41Z/bD+VUiA19VudHZPLE9L4=,tag:owe2WFHm/TGpSGeRkmNBiw==,type:str]
          secretName: nectarine-tls
    rules:
        - host: ENC[AES256_GCM,data:VC4IhfGK8KqJ1wj9E5KW6jZ8LhJlMA==,iv:VtCCOAtF6xIa6Wli6lwQL4Utf9rIvs53pI3ZwBBVXA4=,tag:OkZMuukh5zdHlVn+0v7xhg==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nectarine
                        port:
                            number: 5000
        - host: ENC[AES256_GCM,data:nzLNgxt7xFLIiGAJC2zY/7Hv,iv:FZWNapPkEy1hMydc1KVXDdqkS69biZXaNmWn2V9va2k=,tag:X+IPc4Mb/DVPaI/lQwF2qA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nectarine
                        port:
                            number: 10002
        - host: ENC[AES256_GCM,data:igViFu1Cbl2Xd3C+Q5OAvQRrKg==,iv:SNM7a3WvXMLOeLfaoIYQaE6aC78daF8HfUtUUNTbUTI=,tag:587mRIsoh+T/+I+xYYencQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nectarine
                        port:
                            number: 5081
        - host: ENC[AES256_GCM,data:xv6IrZkpPgdVISZSHBlDHEc=,iv:hiUDtrQQza7UpvpDUPAo8t6rbovOTulkYYF4jhB/m+8=,tag:YK5YYOSQcFK1m740hqUk+w==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nectarine
                        port:
                            number: 10002
        - host: ENC[AES256_GCM,data:rpmCFAHWj01YMsqRHnJe9GQi,iv:RauaHCpuzq1VBwpF7ZeT5AQTZ/5xdTlBaVMPZxp1NbY=,tag:MphsZnaOpEYDrY4i4EgKOg==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nectarine
                        port:
                            number: 5081
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-04-17T17:47:06Z"
    mac: ENC[AES256_GCM,data:jh6vFtX1J0USfQXmuKaNM9m16R3+F4DVMuks2JcADiirJxFhoWy66dKJLFp8Gn9LJ/mkZQMkkkj21FaJp0V96ye9NPbJgcqDyzWOk90DycrulB997txE29a29M2sLCf1aNxh854KOl28trVi2wC9Y+w+Ailkz3pqGmBlefOVkiY=,iv:+a2lD8e+A0DbSqFs/gfuf+FpRsXeD1J0KMmf0DQDDow=,tag:WdMPCi5GwHfHRPj2Xt73BA==,type:str]
    pgp:
        - created_at: "2023-04-10T17:59:38Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA8WjeZLD+fxwAQ//Y0MfVpk9G0PvpfLWMevIARlNbInfcRxDswfvNHK6Wjc7
[...]
            H1ye2GX0h7exzQkdMXEumjFoeJpyWLJ0n6fNef1PVTG2Eg==
            =ladq
            -----END PGP MESSAGE-----
          fp: 3536F7F9345D96C86FB7F9CD21FAFEE575B18815
    encrypted_regex: ^(hosts?)$
    version: 3.7.3
