apps/ingress-proxy/ingress-satsuma.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: satsuma
    namespace: ingress-proxy
    annotations:
        cert-manager.io/cluster-issuer: ${LETSENCRYPT_CLUSTER_ISSUER}
spec:
    ingressClassName: nginx
    tls:
        - hosts:
            - ENC[AES256_GCM,data:zNxDML3p0E55osuL,iv:qqeDKlwuxoM9G+BJm9XWKFE9kVOz6YLY0rqfFL8JXU8=,tag:JgFxvATyN7KPFXWcdiPAYQ==,type:str]
            - ENC[AES256_GCM,data:C4RRG+nWC49g8vc=,iv:AoCUGJ4EOIkKGFee+MOVqHtL1jXkj/jOggX4EYlgJYQ=,tag:XgYDlMR+m2kXo3D4wZpq8A==,type:str]
            - ENC[AES256_GCM,data:3PegcDa0yD+zJAw9Xm1tfVTWR3Y=,iv:RIRVu2mdG3RfkezOCk/VzYAvMdNqhGCKezkcI5t7zPA=,tag:TYw7brE3ywt2jC0jGDJfWw==,type:str]
            - ENC[AES256_GCM,data:+fya3/Xc2Asv6Rs2RctOLiz7,iv:qx7lQ+eb+pswJR8oBQKhXGrm+QNrL4GWuaspYExUrq8=,tag:tysS1h2Cgcvq+w2B1HIKHw==,type:str]
          secretName: satsuma-tls
    rules:
        - host: ENC[AES256_GCM,data:QVZ80xoRFUI0lEK2,iv:eVEDIehxvI6enlbcF4DdPLb4sqnvjzWKqbP9FmkdfMY=,tag:fIGRj4M6lleeCuwt93mLEA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: satsuma
                        port:
                            number: 80
        - host: ENC[AES256_GCM,data:Wc8YflBueqFcgD0=,iv:myzvYB0mWqLvcRO8kn1kztb2HcjVZH7cF/pZxwmHr5Q=,tag:JBqeputL50LnMKpTJtSenA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: satsuma
                        port:
                            number: 80
        - host: ENC[AES256_GCM,data:Cu70vo3D7eUTrHCv/mXOmsFjX6U=,iv:VrEIf2497WRByOVDiecA6EO8JUSE4a7nmKiTbDKCUgI=,tag:AtsVB+xrvgkL2sY2dh9Z5w==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: satsuma
                        port:
                            number: 8989
        - host: ENC[AES256_GCM,data:XLlAy+Ex8C9c6Ju42i58MyPE,iv:g/d/pZzguz9hg/XCi5lHOEkgrnnh/fKTh5edS3e1u8c=,tag:Ogcrc8wg8njlZdxw9MPzwg==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: satsuma
                        port:
                            number: 3334
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-04-11T08:11:33Z"
    mac: ENC[AES256_GCM,data:tOvf27jnvr5ft7cZNzdRCMkNBSgaDRNR+drI765gnXTFEWATX5At4/JdgrjOnCIQKx9EryKYi590wRSzoYezFunHee42Kkf2VKWT+snnnkp5Ic1M2ivIDtMUMaaGCGk6LtYDXBbdiyAWVMBxDXq7qIIU1OBGtK+oLKe7BhqHAgU=,iv:8Ryr91ZZ6TkNzLKOnJ9fh0DP5tJshtWP75+TFSXe76Y=,tag:hm2X22FH+fxwQEXu3XN8dw==,type:str]
    pgp:
        - created_at: "2023-04-11T08:11:33Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA8WjeZLD+fxwAQ/+NVFziKxB3thFWXbEWLMAbnvEORYkbcMEMQeG/W/II1o+
[...]
            m+RUEVFiQSVmfVR3bIAEzwQYlHgKCNKze5wWmSNE9GMplg==
            =yME/
            -----END PGP MESSAGE-----
          fp: 3536F7F9345D96C86FB7F9CD21FAFEE575B18815
    encrypted_regex: ^(hosts?)$
    version: 3.7.3
